@@ -1,5 +1,7 @@
 2020-04-25  Araki Ken  <arakiken@users.sf.net>
 
+	* zmodem.c: basename() -> bl_basename()
+
 	* README.fb: Updated.
 
 	* vt_parser.c: Minor fix.
